--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=demo
+server.port=8083
+spring.datasource.url=jdbc:mysql://35.206.89.31:3306/task1
+spring.datasource.username=myuser
+spring.datasource.password=mypass
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
